<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="260dp"
        android:layout_height="283dp"
        android:layout_marginStart="70sp"
        android:layout_marginTop="20dp"
        android:src="@drawable/vamsi21">

    </de.hdodenhof.circleimageview.CircleImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/vamsi_doraswamy"
        android:textAlignment="center"
        android:textColor="@color/navy"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_developer"
        android:layout_marginStart="127dp"
        android:textSize="16sp"
        android:fontFamily="monospace"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="140dp"
        android:fontFamily="sans-serif"
        android:text="@string/doraswamyvamsi9_gmail_com"
        android:textSize="16sp"
        android:textStyle="normal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="170sp"
        android:fontFamily="sans-serif"
        android:text="@string/_91_6303375517"
        android:textSize="16sp"
        android:textStyle="normal"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/i_love_building_customizing_apps_in_an_innovative_way"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skills"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/java_kotlin_python_flutter_android"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="18sp"
        android:textStyle="normal"
        />


    <LinearLayout
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="90dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:onClick="fb"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/facebook_logo"
            android:id="@+id/facebook"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/instagram_icon"
            android:id="@+id/instagram"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:onClick="tweet"
            android:layout_marginEnd="20dp"
            android:src="@drawable/linkedin_iconlogo"
            android:id="@+id/Linkedin"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="90dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:onClick="tweet"
            android:src="@drawable/twitter_icon"
            android:id="@+id/Twitter"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/youtubeicon"
            android:onClick="yt"
            android:id="@+id/youtube"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:onClick="share"
            android:src="@drawable/shareicon"
            android:id="@+id/share"/>

    </LinearLayout>
</LinearLayout>